--- a/web/views/menu.html
+++ b/web/views/menu.html
@@ -14,6 +14,7 @@
         <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="home">Home</a></li>
+                <li><a href="friends">Add</a></li>
                 <li><a href="logout">Logout</a></li>
             </ul>
         </div>
