--- a/web/css/style.css
+++ b/web/css/style.css
@@ -11,3 +11,25 @@
     max-height: 450px;
     overflow: auto;
 }
+
+.addUser{
+    background-color: #c0c0c0 !important;
+    border-radius: 20px;
+    margin: 15px;
+    box-shadow: 2px 2px 7px #157ab5;
+}
+
+.chat-wrapper{
+}
+.chat-header{
+    padding: 10px;
+    background-color: #157ab5;
+    border-radius: 10px;
+}
+.chat-body{
+    height:300px;
+    border-radius: 20px;
+    background-color: #1995dc;
+    box-shadow: 0px 0px 5px 5px #157ab5 inset;
+    overflow: auto;
+}
